[package]
name = "sdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
surrealdb = { version = "1.0.0-beta.8", features = ["kv-rocksdb"] }
serde =  {version = "1.0.0", features= ["derive"]}
tokio = { version = "1", features = ["full"] }
